--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "vercel": "^35.2.4"
   },
   "devDependencies": {
     "eslint": "^8",
