--- a/.env
+++ b/.env
@@ -1,3 +1,2 @@
-# MONGODB_URI='mongodb+srv://allairemat:ZombieJesus9@drawingapp.so9q8oz.mongodb.net/?retryWrites=true&w=majority&appName=DrawingApp'
-# NEXT_PUBLIC_API_BASE_URL='https://kitchen-red.vercel.app/'
-# PORT=5150
+MONGODB_URI='mongodb+srv://allairemat:ZombieJesus9@drawingapp.so9q8oz.mongodb.net/?retryWrites=true&w=majority&appName=DrawingApp'
+NEXT_PUBLIC_API_BASE_URL='https://kitchen-red.vercel.app/'
