--- a/vercel.json
+++ b/vercel.json
@@ -13,7 +13,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "/src/app/pages/api/$1"
+      "dest": "/src/app/api/$1"
     },
     {
       "src": "/(.*)",
