--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "kitchenapp",
   "version": "0.1.0",
   "private": true,
-  "type": "module" ,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -17,6 +17,7 @@
     "mongodb": "^6.8.0",
     "next": "14.2.5",
     "react": "^18",
+    "react-camera-pro": "^1.4.0",
     "react-dom": "^18",
     "vercel": "^32.3.0"
   },
